src/css/NavBar.scss
@import './helpers';

.navbar {
    display: flex;
    padding: 1.2rem;
    background-color: var(--background-secondary);
    flex-direction: column;
    & > * {
        flex-basis: 100%;
        justify-content: center;
    }
    width: 100%;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

@media (min-width: 40em) {
    .navbar {
        flex-direction: row;
        justify-content: space-between;
    }
}

.site-logo {
    cursor: pointer;
    color: var(--clr-accent);
    font-weight: 600;
}

.nav-container {
    @include flexCenter();
    & > * {
        margin-inline: 1.5rem;
    }
}

.nav-btn {
    display: inline-block;
    text-align: right;
    &:hover {
        color: var(--clr-accent);
        cursor: pointer;
        text-decoration: underline;
    }
}

.search-container {
    margin-top: 1.5rem;
    max-width: 30rem;
    margin-inline: 1.5rem;
    display: flex;
    flex-wrap: wrap;
    & > *:first-child {
        flex-basis: 100%;
        margin-right: 0.5rem;
    }
    & > *:nth-child(2) {
        flex-basis: 50%;
        margin-right: 0.5rem;
        margin-top: 0.5rem;
    }

    & > *:nth-child(3) {
        flex-basis: 20%;
        margin-top: 0.25rem;
    }

    /* react-select dropdowns */
    & [class$='-control'] {
        background-color: var(--clr-primary);
        border-color: var(--clr-border);
        box-shadow: none;
        &:hover {
            border-color: var(--clr-accent);
        }
    }

    & [class$='-singleValue'] {
        color: var(--foreground);
    }

    & [class$='-menu'] {
        background-color: var(--clr-primary);
    }

    & [class$='-option'] {
        background-color: var(--clr-primary);
        color: var(--foreground);
        cursor: pointer;
        &:hover {
            background-color: var(--background);
        }
    }
}

@media (min-width: 40em) {
    .search-container {
        margin-top: 0;
        flex-direction: row;
        flex-wrap: nowrap;

        & > *:nth-child(2),
        & > *:nth-child(3) {
            margin-top: 0;
        }
    }
}

.dark-mode-toggle {
    display: flex;
    justify-content: center;
    button {
        width: 44px;
        height: 44px;
        padding: 0.75rem;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 50%;
        background-color: var(--background-secondary);
        border: none;
        &:hover {
            background-color: var(--background);
        }
    }
}

.dark-theme .dark-mode-toggle button:hover {
    background-color: var(--clr-primary);
}

